tests/baselines/reference/parserErrorRecoveryIfStatement1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement1.ts (1 errors) ====
    class Foo {
      f1() {
        if (
      }
      ~
!!! error TS1109: Expression expected.
      f2() {
      }
      f3() {
      }
    }